--- a/src/NoName/WebLayer/Views/Home/Index.cshtml
+++ b/src/NoName/WebLayer/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <h1>NoName Project</h1>
     <p class="lead">Free Open Source Audio Streaming Service.</p>
-    <p> details will follow laters</p>
+    <p> details will follow later</p>
 </div>
 
 <div class="row">
