--- a/src/NoName/ServerGUI/MainWindow.xaml
+++ b/src/NoName/ServerGUI/MainWindow.xaml
@@ -23,8 +23,9 @@
             <Button Content="Scan" Margin="5" Padding="5" Click="ScanClick" Name="ScanBtn"></Button>
          
         </StackPanel>
-        <ListBox Name="FileListBox" Grid.Row="1" Grid.Column="0"  ScrollViewer.VerticalScrollBarVisibility="Visible"></ListBox>
+        <ListBox Name="FileListBox" Grid.Row="1" Grid.Column="0"  ScrollViewer.VerticalScrollBarVisibility="Visible"
+                 x:FieldModifier="public"></ListBox>
         
-        <TextBlock Grid.Row="2" Grid.Column="0" Name="InfoBar"></TextBlock>
+        <TextBlock Grid.Row="2" Grid.Column="0" Name="InfoBar" x:FieldModifier="public"></TextBlock>
     </Grid>
 </Window>
