--- a/src/NoName/WebLayer/Views/MediaFile/AddFiles.cshtml
+++ b/src/NoName/WebLayer/Views/MediaFile/AddFiles.cshtml
@@ -7,21 +7,18 @@
 <h2>AddFiles</h2>
 
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>MediaFile</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-                <form action="/" method="post" enctype="multipart/form-data">
-                    <input type="file" name="FileUpload1" /><br />
-                    <input type="submit" name="Submit" id="Submit" value="Upload" />
-                </form>
+@using (Html.BeginForm("AddFiles", "MediaFile", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{ @Html.AntiForgeryToken()
+
+    <fieldset>
+         <legend>Upload a file</legend>
+        <div class="editor-field">
+             @Html.TextBox("file", "", new {type = "file"})
         </div>
-    </div>
+        <div class="editor-field">
+             <input type="submit" value="Upload"/>
+        </div>
+    </fieldset> 
 }
 
 <div>
