Solved problem with file size, now up to 2Gb files allowed

--- a/src/NoName/WebLayer/Views/MediaFile/AddFiles.cshtml
+++ b/src/NoName/WebLayer/Views/MediaFile/AddFiles.cshtml
@@ -16,7 +16,7 @@
              @Html.TextBox("file", "", new {type = "file"})
         </div>
         <div class="editor-field">
-             <input type="submit" value="Upload"/>
+             <input type="submit" value="Upload" multiple="true"/>
         </div>
     </fieldset> 
 }
