--- a/src/NoName/WebLayer/Views/MediaFile/Index.cshtml
+++ b/src/NoName/WebLayer/Views/MediaFile/Index.cshtml
@@ -35,11 +35,14 @@
             @Html.DisplayFor(modelItem => item.Path)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Play", null, new { id = item.Id }) |
+            @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
+            @Html.ActionLink("Details", "Details", new {id = item.Id}) |
+            @Html.ActionLink("Delete", "Delete", new {id = item.Id})
         </td>
     </tr>
+
+   
 }
 
 </table>
