--- a/src/NoName/WebLayer/Views/MediaFile/Index.cshtml
+++ b/src/NoName/WebLayer/Views/MediaFile/Index.cshtml
@@ -20,6 +20,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Path)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.createdOn)
+        </th>
         <th></th>
     </tr>
 
@@ -33,6 +36,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Path)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.createdOn)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
