--- a/src/NoName/WebLayer/Views/MediaFile/Index.cshtml
+++ b/src/NoName/WebLayer/Views/MediaFile/Index.cshtml
@@ -38,6 +38,9 @@
             @Html.DisplayFor(modelItem => item.Path)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.createdOn)
+        </td>
+        <td>
             @Html.ActionLink("Play", null, new { id = item.Id }) |
             @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
             @Html.ActionLink("Details", "Details", new {id = item.Id}) |
