player work in progress

--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewBag.Title - HolyStream</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="~/Scripts/360-player/360player-visualization.css" rel="stylesheet" />
+    <link href="~/Scripts/360-player/360player.css" rel="stylesheet" />
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
@@ -13,7 +15,11 @@
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/Scripts/respond.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
-
+    <script src="~/Scripts/player/soundmanager2.js"></script>
+    <script src="~/Scripts/player/soundmanager2-jsmin.js"></script>
+    <script src="~/Scripts/360-player/script/360player.js"></script>
+    <script src="~/Scripts/360-player/script/berniecode-animator.js"></script>
+    <script src="~/Scripts/360-player/script/excanvas.js"></script>
 </head>
 <body>
 <div class="navbar navbar-inverse navbar-fixed-top">
