--- a/src/NoName/WebLayer/Views/MediaFile/Index.cshtml
+++ b/src/NoName/WebLayer/Views/MediaFile/Index.cshtml
@@ -41,7 +41,9 @@
             @Html.DisplayFor(modelItem => item.createdOn)
         </td>
         <td>
-            @Html.ActionLink("Play", null, new { id = item.Id }) |
+            <div class="ui360">
+                <a href="@item.Name" class="sm2_link" >Play</a>
+                               </div> |
             @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
             @Html.ActionLink("Details", "Details", new {id = item.Id}) |
             @Html.ActionLink("Delete", "Delete", new {id = item.Id})
