--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -54,5 +54,9 @@
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/bootstrap")
 @RenderSection("scripts", false)
+    <script src="~/Scripts/360-player/script/360player.js"></script>
+    <script src="~/Scripts/360-player/script/berniecode-animator.js"></script>
+    <script src="~/Scripts/360-player/script/excanvas.js"></script>
+
 </body>
 </html>
