--- a/src/NoName/WebLayer/Views/MediaFile/AddFiles.cshtml
+++ b/src/NoName/WebLayer/Views/MediaFile/AddFiles.cshtml
@@ -1,22 +1,21 @@
 ﻿@model Domain.MediaFile
 
 @{
-    ViewBag.Title = "AddFiles";
+    ViewBag.Title = "Add Files";
 }
 
-<h2>AddFiles</h2>
+<h2>Upload a file</h2>
 
 
 @using (Html.BeginForm("AddFiles", "MediaFile", FormMethod.Post, new { enctype = "multipart/form-data" }))
 { @Html.AntiForgeryToken()
 
     <fieldset>
-         <legend>Upload a file</legend>
         <div class="editor-field">
              @Html.TextBox("file", "", new {type = "file"})
         </div>
         <div class="editor-field">
-             <input type="submit" value="Upload" multiple="true"/>
+            <input type="submit" class="btn-info" value="Upload" multiple="true" />
         </div>
     </fieldset> 
 }
