Fixed path to files

--- a/src/NoName/WebLayer/Views/MediaFile/Index.cshtml
+++ b/src/NoName/WebLayer/Views/MediaFile/Index.cshtml
@@ -30,7 +30,7 @@
     <tr>
         <td>
             <div class="ui360" style="display:inline-block">
-                <a href="@Server.MapPath("~/AppData/Music/"+item.Name)">  
+                <a href="@Url.Content("~/Content/Music/"+item.Name)">  
                 </a>
             </div> 
         </td>
