--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -49,13 +49,16 @@
 
 @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", false)
     <script src="~/Scripts/player/soundmanager2-nodebug-jsmin.js"></script>
     <script src="~/Scripts/360-player/script/360player.js"></script>
     <script src="~/Scripts/360-player/script/berniecode-animator.js"></script>
     <script src="~/Scripts/360-player/script/excanvas.js"></script>
-
-
+    
 @RenderSection("scripts", false)
 
+    <script src="~/Scripts/360-player/script/360player.js"></script>
+    <script src="~/Scripts/360-player/script/berniecode-animator.js"></script>
+    <script src="~/Scripts/360-player/script/excanvas.js"></script>
 </body>
 </html>
