--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -31,18 +31,30 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Files", "Index", "MediaFile")</li>
-                @*<li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+           <!--     <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>  -->
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
     </div>
 </div>
+
+
 <div class="container body-content">
     @RenderBody()
     <hr/>
-    <footer>
-        <p>&copy; @DateTime.Now.Year - HolySquad</p>
+    <footer class="text-center">
+        <div class="container">
+            <div class="row">
+                <div class="social_icon">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-linkedin"></a>
+                    <a href="#" class="fa fa-tumblr"></a>
+                </div>
+                <p>HolySquad © 2014 - @DateTime.Now.Year</p>  
+            </div>
+        </div>
     </footer>
 </div>
 
