--- a/src/NoName/WebLayer/Views/Home/Index.cshtml
+++ b/src/NoName/WebLayer/Views/Home/Index.cshtml
@@ -252,9 +252,9 @@
                 <div class="col-md-12"></div>
                 <div class="col-sm-6 col-md-4 address">
                     <h3>OUR ADDRESS</h3>
-                    <p><i class="fa fa-phone"></i>  090-080-0980</p>
-                    <p><i class="fa fa-envelope-o"></i> <a href="#">info@company.com</a></p>
-                    <p><i class="fa fa-globe"></i> <a href="#">http://www.company.com</a></p>
+                    <p><i class="fa fa-phone"></i>  8-800-55-35-35</p>
+                    <p><i class="fa fa-envelope-o"></i> <a href="#">info@holystream.tk/</a></p>
+                    <p><i class="fa fa-globe"></i> <a href="#">http://www.holystream.tk</a></p>
                     <p><i class="fa fa-map-marker"></i> 360 Aenean Quis Semper, Maecenas 10450</p>
                 </div>
                 <div class="col-sm-6 col-md-8">
