--- a/src/NoName/WebLayer/Views/Home/Index.cshtml
+++ b/src/NoName/WebLayer/Views/Home/Index.cshtml
@@ -150,13 +150,13 @@
                 </div>
                 <div class="col-sm-6 col-md-3">
                     <img src="~/Content/Img/member3.jpg" class="img-responsive" alt="team 3">
-                    <h3>JULIA</h3>
-                    <p>DIRECTOR</p>
+                    <h3>SERGHEI</h3>
+                    <p>MANAGER</p>
                 </div>
                 <div class="col-sm-6 col-md-3">
                     <img src="~/Content/Img/member4.jpg" class="img-responsive" alt="team 4">
-                    <h3>LINDA</h3>
-                    <p>MANAGER</p>
+                    <h3>JULIA</h3>
+                    <p>DIRECTOR</p>
                 </div>
             </div>
         </div>
@@ -253,7 +253,7 @@
                 <div class="col-sm-6 col-md-4 address">
                     <h3>OUR ADDRESS</h3>
                     <p><i class="fa fa-phone"></i>  8-800-55-35-35</p>
-                    <p><i class="fa fa-envelope-o"></i> <a href="#">info@holystream.tk/</a></p>
+                    <p><i class="fa fa-envelope-o"></i> <a href="#">info@holystream.tk</a></p>
                     <p><i class="fa fa-globe"></i> <a href="#">http://www.holystream.tk</a></p>
                     <p><i class="fa fa-map-marker"></i> 360 Aenean Quis Semper, Maecenas 10450</p>
                 </div>
