added new member
)))

--- a/src/NoName/WebLayer/Views/Home/Index.cshtml
+++ b/src/NoName/WebLayer/Views/Home/Index.cshtml
@@ -149,7 +149,7 @@
                     <p>DEVELOPER</p>
                 </div>
                 <div class="col-sm-6 col-md-3">
-                    <img src="~/Content/Img/member3.jpg" class="img-responsive" alt="team 3">
+                    <img src="~/Content/Img/member_slow.png" class="img-responsive" alt="team 3">
                     <h3>SERGHEI</h3>
                     <p>MANAGER</p>
                 </div>
