--- a/src/NoName/WebLayer/Views/MediaFile/Index.cshtml
+++ b/src/NoName/WebLayer/Views/MediaFile/Index.cshtml
@@ -30,9 +30,8 @@
     {
         <tr>
             <td>
-                <div class="ui360" style="display: inline-block">
-                    <a href="@Url.Content("~/Content/Music/" + item.Name)">
-                    </a>
+                <div class="ui360">
+                    <a href="@Url.Content("~/Content/Music/" + item.Name)"></a>
                 </div>
             </td>
             <td>
