--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Files", "Index", "MediaFile")</li>
                 <li>@Html.ActionLink("Logs", "Index", "Logs")</li>
+                <li>@Html.ActionLink("MediaFilesLog", "MediaLog", "Logs")</li>
            <!--     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>  -->
             </ul>
