--- a/src/NoName/WebLayer/Views/Home/Index.cshtml
+++ b/src/NoName/WebLayer/Views/Home/Index.cshtml
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="~/css/templatemo_style.css">
     <link rel="stylesheet" href="~/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
+
+    <script src="//load.sumome.com/" data-sumo-site-id="3487cec3850ab3022eaf80748845548fe71a9ee83304e50fb0f6bccbed76342a" async="async"></script>
+
 </head>
 
 
