--- a/src/NoName/WebLayer/Views/Home/Index.cshtml
+++ b/src/NoName/WebLayer/Views/Home/Index.cshtml
@@ -2,15 +2,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <title>Composite Template</title>
+    <meta name="keywords" content="Holy Stream Squad">
+    <meta name="description" content="Free closed stream service">
+    <title>HolyStream from HolySquad</title>
     <link rel="stylesheet" href="~/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/css/templatemo_style.css">
     <link rel="stylesheet" href="~/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
 
-    <script src="//load.sumome.com/" data-sumo-site-id="3487cec3850ab3022eaf80748845548fe71a9ee83304e50fb0f6bccbed76342a" async="async"></script>
 
 </head>
 
