Playlist mapped. Playlist View, controler, repository

--- a/src/NoName/WebLayer/Views/MediaFile/Delete.cshtml
+++ b/src/NoName/WebLayer/Views/MediaFile/Delete.cshtml
@@ -36,11 +36,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.createdOn)
+            @Html.DisplayNameFor(model => model.CreatedOn)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.createdOn)
+            @Html.DisplayFor(model => model.CreatedOn)
         </dd>
 
     </dl>
