--- a/src/NoName/WebLayer/Views/MediaFile/View.cshtml
+++ b/src/NoName/WebLayer/Views/MediaFile/View.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.Path)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.createdOn)
+            @Html.DisplayNameFor(model => model.CreatedOn)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Format)
@@ -44,7 +44,7 @@
             @Html.DisplayFor(modelItem => item.Path)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.createdOn)
+            @Html.DisplayFor(modelItem => item.CreatedOn)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Format)
