--- a/src/NoName/WebLayer/Views/MediaFile/Index.cshtml
+++ b/src/NoName/WebLayer/Views/MediaFile/Index.cshtml
@@ -4,54 +4,37 @@
     ViewBag.Title = "View";
 }
 
-<h2>View</h2>
+<h2>All music</h2>
 
 <p>
-    @Html.ActionLink("Add New Files", "AddFiles")
+    @Html.ActionLink("Add New Song", "AddFiles", null, new { @id = "create-btn" })
 </p>
-<table class="table">
-    <tr>
-        <th>
 
-        </th>
-
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Duration)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedOn)
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                <div class="ui360">
-                    <a href="@Url.Content("~/Content/Music/" + item.Name)"></a>
-                </div>
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Duration)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedOn)
-            </td>
-            <td>
+<div id="table-container">
+    @{Html.RenderPartial("FilesList");}
+</div>
 
 
-                @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-                @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-                @Html.ActionLink("Delete", "Delete", new {id = item.Id})
-            </td>
-        </tr>
-    }
+<div id="createS">
+    <div id="create-content">
+        test create
+    </div>
+</div>
 
-</table>
+<div id="editS">
+    <div id="edit-content">
+        test edit
+    </div>
+</div>
+
+<div id="detailsS">
+    <div id="details-content">
+        test details
+    </div>
+</div>
+
+<div id="deleteS">
+    <div id="delete-content">
+        test delete
+    </div>
+</div>
