--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -9,15 +9,20 @@
 
     <link href="~/Scripts/360-player/360player.css" rel="stylesheet" />
     <link href="~/Scripts/360-player/360player-visualization.css" rel="stylesheet" />
-    <link href="~/Scripts/360-player/demo-slider-controls.css" rel="stylesheet" />
+    <link href="~/Scripts/360-player/demo-slider-controls.css" rel="stylesheet"/>
+    <link href="~/Content/jquery-ui.min.css" rel="stylesheet" />
+    <link href="~/Content/jquery-ui.structure.min.css" rel="stylesheet" />
+    <link href="~/Content/jquery-ui.theme.min.css" rel="stylesheet" />
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/jquery-ui.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     @*<script src="~/Scripts/jquery-1.10.2.intellisense.js"></script>*@
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/Scripts/respond.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Scripts/player/soundmanager2.js"></script>
+    <script src="~/Scripts/MediaFile.js"></script>
   
 
 </head>
