--- a/src/NoName/WebLayer/Views/MediaFile/Delete.cshtml
+++ b/src/NoName/WebLayer/Views/MediaFile/Delete.cshtml
@@ -8,15 +8,15 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>MediaFile</h4>
+    <h4>Song</h4>
     <hr/>
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Version)
+            @Html.HiddenFor(model => model.Version)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Version)
+            @Html.HiddenFor(model => model.Version)
         </dd>
 
         <dt>
@@ -45,7 +45,7 @@
 
     </dl>
 
-    @using (Html.BeginForm())
+    @*@using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
@@ -53,5 +53,5 @@
             <input type="submit" value="Delete" class="btn btn-default"/> |
             @Html.ActionLink("Back to List", "Index")
         </div>
-    }
+    }*@
 </div>
