--- a/src/NoName/WebLayer/Views/MediaFile/Details.cshtml
+++ b/src/NoName/WebLayer/Views/MediaFile/Details.cshtml
@@ -1,8 +1,50 @@
-﻿@model dynamic
+﻿@model Domain.MediaFile
 
 @{
-    ViewBag.Title = "title";
-    Layout = "_Layout";
+    ViewBag.Title = "Details";
 }
 
-<h2>title</h2>
+<h2>Details</h2>
+
+<div>
+    <h4>MediaFile</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.HiddenFor(model => model.Version)
+        </dt>
+
+        <dd>
+            @Html.HiddenFor(model => model.Version)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Name)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Path)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Path)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CreatedOn)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CreatedOn)
+        </dd>
+
+    </dl>
+</div>
+<p>
+   @* @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |*@
+    @*@Html.ActionLink("Back to List", "Index")*@
+</p>
