--- a/src/NoName/WebLayer/Views/MediaFile/AddFiles.cshtml
+++ b/src/NoName/WebLayer/Views/MediaFile/AddFiles.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Domain.MediaFile
 
 @{
-    ViewBag.Title = "Add Files";
+    ViewBag.Title = ViewBag.Message;
 }
 
 <h2>Upload a file</h2>
@@ -11,18 +11,53 @@
 {
     @Html.AntiForgeryToken()
 
-    <fieldset>
+    <input id="fileupload" type="file" name="files[]" data-url="@Url.Action("AddFiles")" multiple >
+
+    <div id="progress">
+        <div class="bar" style="width: 0%;"></div>
+        <div id="inform"></div>
+    </div>
+    
+
+    <script>
+        $(function() {
+            $('#fileupload').fileupload({
+                dataType: 'json',
+                add: function (e, data) {
+                    data.context = $('<p/>').text('Uploading...').appendTo($('#inform'));
+                    data.submit();
+                },
+                done: function (e, data) {
+                    data.context.text('Upload finished.');
+                },
+                progressall: function (e, data) {
+                    var progress = parseInt(data.loaded / data.total * 100, 10);
+                    $('#progress .bar').css(
+                        'width',
+                        progress + '%'
+                    );
+                }
+            });
+        });
+    </script>
+
+
+    @*<input id="fileupload" type="file" name="files[]" data-url="server/php/" multiple>*@
+    @*<input type="file" class="multi" />*@
+
+
+@*<fieldset>
         <div class="editor-field">
             @Html.TextBox("file", "", new {type = "file"})
         </div>
         <div class="editor-field">
             <input type="submit" class="btn-info" value="Upload" multiple="true"/>
         </div>
-    </fieldset>
+    </fieldset>*@
 }
-<div>
+@*<div>
     @Html.ActionLink("Back to List", "Index")
-</div>
+</div>*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
