Changed logger files location, separated logs per day

--- a/src/NoName/WebLayer/Views/MediaFile/Index.cshtml
+++ b/src/NoName/WebLayer/Views/MediaFile/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Domain.Audio.Song>
 
 @{
-    ViewBag.Title = "View";
+    ViewBag.Title = "All Files";
 }
 
 <h2>All music</h2>
