tmp big changes

--- a/src/NoName/WebLayer/Content/HolyStream/holystream.css
+++ b/src/NoName/WebLayer/Content/HolyStream/holystream.css
@@ -1,10 +1,14 @@
 ﻿
 .albumArtBase64 {
-    width: 128px;
-    height: 128px;
+    width: 90px;
+    height: 90px;
     display:block
 }
 
 .albumInfo {
      margin-left: 15px;
+}
+
+.actionLinks > a {
+    margin: 10px;
 }
