--- a/src/NoName/WebLayer/Content/HolyStream/holystream.css
+++ b/src/NoName/WebLayer/Content/HolyStream/holystream.css
@@ -35,3 +35,12 @@
     padding-bottom: 12px;
   }
 }
+
+.uploadDefault{
+    position:absolute;
+    width:200px;
+    height:40px;
+    margin-top:-40px;
+    z-index:10;
+    opacity:0;
+}
