--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
         <div class="navbar-header">
             <ul class="nav nav-pills">
                 <li> @Html.ActionLink("Home", "Index", "Home") </li>
-                <li>@Html.ActionLink("Files", "Index", "MediaFile")</li>
+                <li>@Html.ActionLink("Songs", "Index", "Song")</li>
                 <li>@Html.ActionLink("Playlists", "Index", "Playlist")</li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="False">
@@ -51,7 +51,7 @@
                     </div>
                     <div class="navbar-collapse collapse sidebar-navbar-collapse">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="#">Menu Item 1</a></li>
+                            <li class="active uploadBtn"> <a href="#"><i class="fa fa-upload"></i> Upload </a></li>
                             <li><a href="#">Menu Item 2</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -67,6 +67,7 @@
                             </li>
                             <li><a href="#">Menu Item 4</a></li>
                             <li><a href="#">Reviews <span class="badge">1,118</span></a></li>
+                         
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
