--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -84,6 +84,13 @@
             </div>
         </div>
     </footer>
+
+    <div id="uploadForm"></div>
+    <script>
+    var fileUploadManage = new FileUpload();
+    fileUploadManage.uploadFileUrl = '@Url.Action("AddFile", "Song")';
+    fileUploadManage.uploadFileUrlPartial = '@Url.Action("AddFilePartial", "Song")';
+    </script>
 </div>
     @RenderSection("scripts", required: false)
 </body>
