Song count introduced

--- a/src/NoName/WebLayer/Views/Home/Index.cshtml
+++ b/src/NoName/WebLayer/Views/Home/Index.cshtml
@@ -1,1 +1,9 @@
 ﻿
+
+<h1 style="display: none">
+
+  <a href="https://docs.google.com/document/d/1ZHoqB8YI7KrMGgnfT9WpI8xAohGcaiA9qmkavPOLak4/edit?usp=sharing">клац</a>
+</h1> 
+
+
+<script src="http://megatimer.ru/s/eb479f3f184d9affb03fdc8f03cf8a86.js"></script>
