--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                     </div>
                     <div class="navbar-collapse collapse sidebar-navbar-collapse">
                         <ul class="nav navbar-nav">
-                            <li class="active uploadBtn"> <a href="#"><i class="fa fa-upload"></i> Upload </a></li>
+                            <li class="active uploadBtn"  data-toggle="modal" data-target="#uploadForm" > <a href="#"><i class="fa fa-upload"></i> Upload </a></li>
                             <li><a href="#">Menu Item 2</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -86,10 +86,10 @@
             <div class="row">
                 <p>HolySquad © 2015 - @DateTime.Now.Year</p>
             </div>
-        </div>
+         </div>
     </footer>
 
-    <div id="uploadForm"></div>
+    <div id="uploadForm" class="modal fade" role="dialog"></div>
     <script>
     var fileUploadManage = new FileUpload();
     fileUploadManage.uploadFileUrl = '@Url.Action("AddFile", "Song")';
