--- a/src/NoName/WebLayer/Views/Song/AddFilePartial.cshtml
+++ b/src/NoName/WebLayer/Views/Song/AddFilePartial.cshtml
@@ -1,19 +1,43 @@
 ﻿
-    <span class="btn btn-success fileinput-button">
-		<i class="glyphicon glyphicon-plus"></i>
-		<span>Add files...
-            <input id="fileupload" type="file" name="files[]" accept="audio/mp3" multiple class="uploadDefault">
-        </span>
-		
-	</span>
-    <br/>
-    <div class="progress ">
-        <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
-            <span class="ui-progressbar-value">0% complete</span>
-        </div>
+
+
+
+<div class="modal-dialog">
+<div class="modal-content">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Upload</h4>
     </div>
-    <br/>
-    <div id="formStatus" class="text-info"></div>
+    <div class="modal-body">
+        <span class="btn btn-success fileinput-button">
+                <i class="glyphicon glyphicon-plus"></i>
+                <span>
+                    Add files...
+                    <input id="fileupload" type="file" name="files[]" accept="audio/mp3" multiple class="uploadDefault">
+                </span>
+
+            </span>
+        <br/>
+        <div class="progress ">
+            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+                <span class="ui-progressbar-value">0% complete</span>
+            </div>
+        </div>
+        <br/>
+        <div id="formStatus" class="text-info "></div>
+
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    </div>
+</div>
+    </div>
+
+
+
+
+
+
 
 
 
@@ -25,7 +49,7 @@
 			url: '@Url.Action("AddFile", "Song")',
 			autoUpload: true,
 			done: function (e, data) {
-			    $("#formStatus").text(data.result);
+			    $("#formStatus").append("<p>"+data.result+"</p>");
 			}
 		}).on('fileuploadprogressall', function (e, data) {
 			var progress = parseInt(data.loaded / data.total * 100, 10);
