--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -77,8 +77,10 @@
                 </div>
             </div>
         </div>
-
-        @RenderBody()
+        <div class="col-md-11">
+            @RenderBody()
+        </div>
+     
     </div>
     <hr/>
     <footer class="text-center">
