--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                     </div>
                     <div class="navbar-collapse collapse sidebar-navbar-collapse">
                         <ul class="nav navbar-nav">
-                            <li class="active uploadBtn"  data-toggle="modal" data-target="#uploadForm" > <a href="#"><i class="fa fa-upload"></i> Upload </a></li>
+                            <li class="active uploadBtn" data-toggle="modal" data-target="#uploadForm"> <a href="#"><i class="fa fa-upload"></i> Upload </a></li>
                             <li><a href="#">Menu Item 2</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -71,7 +71,7 @@
                             </li>
                             <li><a href="#">Menu Item 4</a></li>
                             <li><a href="#">Reviews <span class="badge">1,118</span></a></li>
-                         
+
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
@@ -80,7 +80,7 @@
         <div class="col-md-11">
             @RenderBody()
         </div>
-     
+
     </div>
     <hr/>
     <footer class="text-center">
@@ -88,16 +88,28 @@
             <div class="row">
                 <p>HolySquad © 2015 - @DateTime.Now.Year</p>
             </div>
-         </div>
+        </div>
     </footer>
 
     <div id="uploadForm" class="modal fade" role="dialog"></div>
     <script>
-    var fileUploadManage = new FileUpload();
-    fileUploadManage.uploadFileUrl = '@Url.Action("AddFile", "Song")';
-    fileUploadManage.uploadFileUrlPartial = '@Url.Action("AddFilePartial", "Song")';
+        var fileUploadManage = new FileUpload();
+        fileUploadManage.uploadFileUrl = '@Url.Action("AddFile", "Song")';
+        fileUploadManage.uploadFileUrlPartial = '@Url.Action("AddFilePartial", "Song")';
     </script>
 </div>
-    @RenderSection("scripts", required: false)
+
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-73028518-1', 'auto');
+  ga('send', 'pageview');
+
+    </script>
+
+@RenderSection("scripts", required: false)
 </body>
 </html>
