work in progress , implementing new player , added player bar

--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
         <div class="col-md-11">
             @RenderBody()
         </div>
-
+       
     </div>
     <hr/>
     <footer class="text-center">
@@ -90,6 +90,18 @@
             </div>
         </div>
     </footer>
+    <div class="row playerBar">
+        <div class="nav">
+            <ul class="bg-primary">
+                <li class="fa fa-image playerBtn"></li>
+                <li class="fa fa-play playerBtn"></li>
+                <li class="fa fa-backward playerBtn"></li>
+                <li class="fa fa-forward playerBtn"></li>
+            </ul>
+        </div>
+
+
+    </div>
 
     <div id="uploadForm" class="modal fade" role="dialog"></div>
     <script>
