--- a/src/NoName/WebLayer/Content/HolyStream/holystream.css
+++ b/src/NoName/WebLayer/Content/HolyStream/holystream.css
@@ -13,6 +13,10 @@
     margin: 10px;
 }
 
+.audioItem {
+    display: none;
+}
+
 
 /* make sidebar nav vertical */ 
 @media (min-width: 768px) {
@@ -62,4 +66,23 @@
   display: inline-block;
   text-align: left;
   vertical-align: middle;
+}
+
+/* Player zone*/
+.playerBar {
+    position: fixed;
+    bottom: 0%;
+    height: 77px;
+    width: 100%;
+    z-index: 1000
+}
+
+.playerItemBtn {
+    padding: 8px;
+    margin: 8px;
+}
+
+.playerBtn {
+    padding: 16px;
+    margin: 16px;
 }
