fixed bar width, introduced hidden player

--- a/src/NoName/WebLayer/Content/HolyStream/holystream.css
+++ b/src/NoName/WebLayer/Content/HolyStream/holystream.css
@@ -16,6 +16,9 @@
 .audioItem {
     display: none;
 }
+.audioPlayer {
+    display: none;
+}
 
 
 /* make sidebar nav vertical */ 
@@ -72,7 +75,7 @@
 .playerBar {
     position: fixed;
     bottom: 0%;
-    height: 77px;
+    height: 62px;
     width: 100%;
     z-index: 1000
 }
@@ -83,6 +86,6 @@
 }
 
 .playerBtn {
-    padding: 16px;
-    margin: 16px;
+    padding: 12px;
+    margin: 12px;
 }
