--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -103,6 +103,11 @@
 
     </div>
 
+    <div class="audioPlayer">
+        <audio>
+            <source src=""/>
+        </audio>
+    </div>
     <div id="uploadForm" class="modal fade" role="dialog"></div>
     <script>
         var fileUploadManage = new FileUpload();
