Fixed logger. Added onHover effect for logger buttons.

--- a/src/NoName/WebLayer/Content/HolyStream/holystream.css
+++ b/src/NoName/WebLayer/Content/HolyStream/holystream.css
@@ -97,6 +97,11 @@
     margin: 12px;
 }
 
+.bg-primary .playerBtn:hover {
+    border-radius: 5px;
+    background: rgb(61, 132, 193);
+}
+
 /*Song list*/
 .playBtnCol {
     width: 46px;
