--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -97,7 +97,13 @@
                 <li class="fa fa-play playerBtn" id="playStop" onclick="holyplayer.togglePlay()"> </li>
                 <li class="fa fa-backward playerBtn" onclick="holyplayer.back()"></li>
                 <li class="fa fa-forward playerBtn" onclick="holyplayer.forward()"></li>
-            </ul>
+                <li class="fa fa-clock-o playerBtn">
+                    <span id="timeState"></span>
+                </li>
+                <li class="fa fa-file playerBtn">
+                    <span class="text-capitalize" id="playerCurrentSong"></span>
+                </li>
+             </ul>
         </div>
 
 
@@ -120,13 +126,13 @@
 </div>
 
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-73028518-1', 'auto');
-  ga('send', 'pageview');
+        ga('create', 'UA-73028518-1', 'auto');
+        ga('send', 'pageview');
 
     </script>
 
